# simple-completion-language-server

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs  server.rs  snippets.rs
src/snippets/: config.rs  external.rs  mod.rs  vscode.rs
tests/: basic.rs
